--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "pinia": "^3.0.3",
+    "swiper": "^11.0.5",
     "vue": "^3.5.17",
     "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.1"
